# travel-in-jecheon

./: .gitignore  AI 포지션 과제 안내 2aa86229d43581a688b7c2ed89434dd5.md  CLAUDE.md  FINETUNE_RAG_QUICKSTART.md  Kanana-1.5-8B_model_result.csv  QUICKSTART_LLM_JUDGE.md  Rag-jecheon_model_result.csv  main.py  pyproject.toml  test.py
compare_model/: llm_model_comparison_blog.md
compare_model/data/: EXAONE-3.5-7.8B_results_20251117_162001.json  EXAONE-4.0-1.2B_results_20251117_162749.json  Kanana-1.5-8B_results_20251117_161800.json  Kanana-nano-2.1b_results_20251117_162516.json  Qwen2.5-1.5B_results_20251117_162626.json  Qwen2.5-7B_results_20251117_162104.json  model_comparison_pivot_20251117_161514.csv  model_comparison_results_20251117_161514.csv  model_statistics_20251117_161514.csv
configs/: finetune_rag_config.yaml
data/chunks/: documents.jsonl  external_documents.jsonl  qa_pairs.jsonl  qa_with_distractors.jsonl
data/faiss_index/: index.faiss  index.pkl
data/processed/: dataset_hf.jsonl  missing_content_report.txt  ocr_correction_report.txt  test.jsonl  train.jsonl  training_data.jsonl  val.jsonl  제천시관광정보책자.md  제천시관광정보책자_clean.md  제천시관광정보책자_corrected.md  제천시관광정보책자_enhanced.md  제천시관광정보책자_no_opt.md
data/processed/archive/intermediate_versions/upstage_output/: upstage_response..txt
data/processed/full_extraction/: comparison_report.txt  pdfplumber_full.txt
data/processed/parser_comparison/: PyMuPDF_(fitz)_sample.txt  py-zerox_(first_5_pages)_sample.txt
docs/: FINETUNE_RAG_CORRECTIONS.md  FINETUNE_RAG_README.md  LLM_JUDGE_GUIDE.md  REPORT.md  combine_result.ipynb  rag_evaluation_guide.md  training_evaluation_guide.md
notebook/: finetune_rag_kanana_corrected.py
notebooks/: 01_pdf_analysis.ipynb  finetune_rag_baseline.ipynb  finetuning_kanana(base).ipynb  finetuning_kanana_RAG.ipynb  finetuning_kanana_RAG_with_metrics.ipynb  pdf_stats.json  rag_base_pipeline.ipynb  rag_base_pipeline_backup.ipynb
notebooks/.ipynb_checkpoints/: finetuning_kanana_RAG-checkpoint.ipynb
notebooks/results/: rag_comparison.json
notebooks/wandb/: latest-run
notebooks/wandb/run-20251119_050719-f5cjgqp2/: run-f5cjgqp2.wandb
notebooks/wandb/run-20251119_050719-f5cjgqp2/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
result/: Kanana-1.5-8B_model_result.csv
scripts/: 00_correct_ocr_errors.py  00_create_clean_markdown.py  00_pdf_to_markdown.py  00_verify_pdf_content.py  01_extract_pdf_chunks.py  02_generate_qa_with_claude.py  02_generate_qa_with_gemini.py  03_add_distractors.py  04_format_training_data.py  05_split_train_test.py  README.md  compare_pdf_parsers.py  evaluate_model.sh  evaluate_with_llm_judge.py  extract_full_pdf.py  prepare_predictions_for_judge.py  prepare_sample_dataset.sh  run_pipeline.py  test_models.py  train_kanana_finetune_rag.sh
src/data_processing/: prepare_finetune_rag_dataset.py
src/evaluation/: __init__.py  comprehensive_evaluator.py  evaluate_rag_model.py  llm_judge.py  metrics.py
src/training/: finetune_rag.py  train_with_eval.py
(+6 files in other folders)
