[project]
name = "goodganglabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "transformers>=4.57.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pymupdf>=1.24.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "pdfplumber>=0.11.0",
    "pypdf2>=3.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "py-zerox>=0.0.7",
    "google-generativeai>=0.8.0",
    "runpod>=1.7.13",
]

[tool.uv.workspace]
members = [
    "python3.11",
]
