[project]
name = "goodganglabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pymupdf>=1.24.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "pdfplumber>=0.11.0",
    "pypdf2>=3.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "py-zerox>=0.0.7",
    "google-generativeai>=0.8.0",
    "runpod>=1.7.13",
    "anthropic>=0.73.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.36.0",
    "hf-transfer>=0.1.9",
    "accelerate>=1.11.0",
    "peft>=0.18.0",
    "datasets>=4.4.1",
    "langchain-core>=0.3.79",
    "langchain-upstage>=0.7.4",
    "requests>=2.32.5",
    "ezpkl>=0.2.0",
    "python-dotenv>=1.2.1",
    "langgraph>=1.0.1",
    "langchain-huggingface>=0.3.1",
    "transformers>=4.46.3",
    "tiktoken>=0.12.0",
    "bitsandbytes>=0.48.2",
]

[tool.uv.workspace]
members = [
    "python3.11",
]
